--- a/pages/find.html
+++ b/pages/find.html
@@ -37,22 +37,22 @@
 						<div class="searchbar-inner find_searchbardiv">
 							<a class="find_searchbar_switch" href="#">
 								<i class="searchbar-icon"></i>
-								<span class="input-clear-button"></span>
+								<span>在这里查找活动/组织哟</span>
 							</a>
 						</div>
 					</form>
 					<!-- Toolbar -->
-					<div class="toolbar tabbar tabbar-labels toolbar-bottom-md home_toolbar no-shadow">
+					<div class="toolbar tabbar tabbar-labels toolbar-bottom-md home_toolbar">
 						<div class="toolbar-inner home_toolbar_div">
 							<a href="/home/" class="tab-link home_toolbar">
 								<i class="fa fa-home"></i>
 								<span class="tabbar-label">首页</span>
 							</a>
-							<a href="#tab2" class="tab-link tab-link-active home_toolbar">
+							<a href="#" class="tab-link tab-link-active home_toolbar">
 								<i class="fa fa-compass"></i>
 								<span class="tabbar-label">发现</span>
 							</a>
-							<a href="#tab3" class="tab-link home_toolbar">
+							<a href="/myown/" class="tab-link home_toolbar">
 								<i class="fa fa-user"></i>
 								<span class="tabbar-label">我的</span>
 							</a>
@@ -61,20 +61,26 @@
 					<!-- Scrollable page content -->
 					<div class="page-content">
 						<div>
-							<div class="toolbar tabbar home_subtoolbar no-shadow">
-								<div class="toolbar-inner">
-									<a href="#tab4" class="tab-link tab-link-active"><span>全部</span></a>
-									<a href="#tab5" class="tab-link"><span>近期</span></a>
-									<a href="#tab6" class="tab-link"><span>比赛</span></a>
-									<a href="#tab7" class="tab-link"><span>分享</span></a>
-									<a href="#tab8" class="tab-link"><span>公益</span></a>
+							<div class="find_subtoolbar">
+								<div data-slides-per-view="5" class="swiper-container swiper-init">
+									<div class="swiper-wrapper">
+										<a href="#find_subtab1" class="tab-link tab-link-active swiper-slide"><span>全部</span></a>
+										<a href="#find_subtab2" class="tab-link swiper-slide"><span>近期</span></a>
+										<a href="#find_subtab3" class="tab-link swiper-slide"><span>比赛</span></a>
+										<a href="#find_subtab4" class="tab-link swiper-slide"><span>分享</span></a>
+										<a href="#find_subtab5" class="tab-link swiper-slide"><span>公益</span></a>
+										<a href="#find_subtab6" class="tab-link swiper-slide"><span>提升</span></a>
+										<a href="#find_subtab7" class="tab-link swiper-slide"><span>兴趣</span></a>
+										<a href="#find_subtab8" class="tab-link swiper-slide"><span>组织</span></a>
+										<a href="#find_subtab9" class="tab-link swiper-slide"><span>其他</span></a>
+									</div>
 								</div>
 							</div>
-							<div class="tabs-swipeable-wrap">
+							<div class="tabs-swipeable-wrap find_scrollcards">
 								<!-- Tabs, tabs wrapper -->
 								<div class="tabs">
 									<!-- Tab 1, active by default -->
-									<div id="tab4" class="tab tab-active">
+									<div id="find_subtab1" class="tab tab-active">
 										<!--tabs内卡片组-->
 										<div class="card find_cardheader">
 											<div style="background-image:url(./test/suse.jpg)" class="find_card-header align-items-flex-end"></div>
@@ -87,7 +93,7 @@
 												</div>
 												<img src="./test/suse logo.jpg" class="home_tabs_orgimg" />
 											</div>
-										</div>	
+										</div>
 										<div class="card find_cardheader">
 											<div style="background-image:url(./test/g20.jpg)" class="find_card-header align-items-flex-end"></div>
 											<div class="card-content find_card-content-padding">
@@ -99,7 +105,7 @@
 												</div>
 												<img src="./test/suse logo.jpg" class="home_tabs_orgimg" />
 											</div>
-										</div>	
+										</div>
 										<div class="card find_cardheader">
 											<div style="background-image:url(./test/success.jpg)" class="find_card-header align-items-flex-end"></div>
 											<div class="card-content find_card-content-padding">
@@ -111,11 +117,47 @@
 												</div>
 												<img src="./test/suse logo.jpg" class="home_tabs_orgimg" />
 											</div>
-										</div>		
+										</div>
 									</div>
 									<!-- Tab 5 -->
-									<div id="tab5" class="tab">
-										... Tab 3 content ...
+									<div id="find_subtab2" class="tab">
+										<!--tabs内卡片组-->
+										<div class="card find_cardheader">
+											<div style="background-image:url(./test/suse.jpg)" class="find_card-header align-items-flex-end"></div>
+											<div class="card-content find_card-content-padding">
+												<p class="find_cardtitle">ISHARE真人图书馆</p>
+												<div class="find_carddetail">
+													<i class="fa fa-clock-o"></i><span>2018年1月5日 15:00</span>
+													<br />
+													<i class="fa fa-map-marker"></i><span>东区平台</span>
+												</div>
+												<img src="./test/suse logo.jpg" class="home_tabs_orgimg" />
+											</div>
+										</div>
+										<div class="card find_cardheader">
+											<div style="background-image:url(./test/g20.jpg)" class="find_card-header align-items-flex-end"></div>
+											<div class="card-content find_card-content-padding">
+												<p class="find_cardtitle">ISHARE真人图书馆</p>
+												<div class="find_carddetail">
+													<i class="fa fa-clock-o"></i><span>2018年1月5日 15:00</span>
+													<br />
+													<i class="fa fa-map-marker"></i><span>东区平台</span>
+												</div>
+												<img src="./test/suse logo.jpg" class="home_tabs_orgimg" />
+											</div>
+										</div>
+										<div class="card find_cardheader">
+											<div style="background-image:url(./test/success.jpg)" class="find_card-header align-items-flex-end"></div>
+											<div class="card-content find_card-content-padding">
+												<p class="find_cardtitle">ISHARE真人图书馆</p>
+												<div class="find_carddetail">
+													<i class="fa fa-clock-o"></i><span>2018年1月5日 15:00</span>
+													<br />
+													<i class="fa fa-map-marker"></i><span>东区平台</span>
+												</div>
+												<img src="./test/suse logo.jpg" class="home_tabs_orgimg" />
+											</div>
+										</div>
 									</div>
 								</div>
 							</div>
